test_regress/t/t_flag_errorlimit_bad.out
%Error: t/t_flag_errorlimit_bad.v:9: Duplicate declaration of signal: 'u1'
   int u1;
       ^~
        t/t_flag_errorlimit_bad.v:8: ... Location of original declaration
   int u1;
       ^~
%Error: t/t_flag_errorlimit_bad.v:10: Duplicate declaration of signal: 'u1'
   int u1;
       ^~
        t/t_flag_errorlimit_bad.v:8: ... Location of original declaration
   int u1;
       ^~
%Error: Exiting due to
